// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Configuration/Raw Imports Example test 1`] = `
<div class="Source sb-unstyled ">
  <pre class="prismjs">
    <code class="language-jsx"
          style="white-space: pre;"
    >
      <span class="token comment">
        // Stories of Component.mjs
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        import
      </span>
      <span class>
        ComponentRaw
      </span>
      <span class="token keyword">
        from
      </span>
      <span class>
      </span>
      <span class="token string">
        './Component.mjs?raw'
      </span>
    </code>
  </pre>
  <button>
    Copy
  </button>
</div>
`;

exports[`Configuration/Raw Imports Webpack Final Rules Config test 1`] = `
<div class="Source sb-unstyled ">
  <pre class="prismjs">
    <code class="language-jsx"
          style="white-space: pre;"
    >
      <span class="token comment">
        // .storybook/main.mjs
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        export
      </span>
      <span class>
      </span>
      <span class="token keyword">
        default
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token function-variable function">
        webpackFinal
      </span>
      <span class="token operator">
        :
      </span>
      <span class>
      </span>
      <span class="token keyword">
        async
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class="token parameter">
        config
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class>
      </span>
      <span class="token operator">
        =&gt;
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
      </span>
      <span class>
        config
      </span>
      <span class="token punctuation">
        .
      </span>
      <span class>
        module
      </span>
      <span class="token punctuation">
        .
      </span>
      <span class>
        rules
      </span>
      <span class="token punctuation">
        .
      </span>
      <span class="token function">
        map
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class="token parameter">
        rule
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class>
      </span>
      <span class="token operator">
        =&gt;
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        if
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class="token operator">
        !
      </span>
      <span class>
        rule
      </span>
      <span class="token punctuation">
        .
      </span>
      <span class>
        type
      </span>
      <span class="token operator">
        ||
      </span>
      <span class>
        rule
      </span>
      <span class="token punctuation">
        .
      </span>
      <span class>
        type
      </span>
      <span class="token operator">
        !==
      </span>
      <span class>
      </span>
      <span class="token string">
        'asset/source'
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token comment">
        // ? Ensure any loaders are not run on any 'raw' file imports
      </span>
      <span class>
      </span>
      <span class>
        rule
      </span>
      <span class="token punctuation">
        .
      </span>
      <span class>
        resourceQuery
      </span>
      <span class="token operator">
        =
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
      </span>
      <span class="token literal-property property">
        not
      </span>
      <span class="token operator">
        :
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        [
      </span>
      <span class="token regex regex-delimiter">
        /
      </span>
      <span class="token regex regex-source language-regex">
        raw
      </span>
      <span class="token regex regex-delimiter">
        /
      </span>
      <span class="token punctuation">
        ]
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class="token punctuation">
        ,
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        return
      </span>
      <span class>
        rule
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token comment">
        // ...config settings
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        return
      </span>
      <span class>
        config
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class="token punctuation">
        ,
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token comment">
        // ...main.mjs configuration
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class="token punctuation">
        ;
      </span>
    </code>
  </pre>
  <button>
    Copy
  </button>
</div>
`;
